# universal-pddl-parser

./: .gitignore  .travis.yml  Action.h  AgentAction.h  And.cpp  And.h  CMakeLists.txt  CondIter.h  Condition.h  Derived.h  Domain.cpp  Domain.h  EitherType.h  Equals.h  Exists.cpp  Exists.h  Filereader.h  Forall.cpp  Forall.h  Function.h  Ground.cpp  Ground.h  GroundFunc.cpp  GroundFunc.h  HTNMethod.cpp  HTNMethod.h  HTNOperator.cpp  HTNOperator.h  Increase.cpp  Increase.h  Instance.h  Lifted.cpp  Lifted.h  NetworkNode.h  Not.cpp  Not.h  Oneof.h  Or.cpp  Or.h  ParamCond.cpp  (+10 more)
examples/: CMakeLists.txt
examples/parser/: parser.cpp
examples/serialize/: serialize.cpp
examples/she/: compileSHE.cpp
parser/: Action.cpp  Action.h  AgentAction.cpp  AgentAction.h  And.cpp  Basic.h  CMakeLists.txt  Derived.cpp  Derived.h  Domain.h  Equals.cpp  Equals.h  Exists.cpp  Exists.h  Expression.cpp  Expression.h  Filereader.h  Forall.cpp  Function.cpp  Function.h  FunctionModifier.cpp  Ground.cpp  GroundFunc.cpp  GroundFunc.h  HTNOperator.h  Increase.cpp  Increase.h  Instance.h  Lifted.h  NetworkNode.cpp  NetworkNode.h  Not.cpp  Oneof.cpp  Oneof.h  Or.cpp  Or.h  ParamCond.h  Task.cpp  TemporalAction.cpp  TemporalAction.h  (+10 more)
script/: cibuild  runtests.sh
testenv/: MiniCppUnit.cpp
tests/: DomainTests.cpp  SConscript
